--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": ""
+    "start": "live-server"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/milesdavis71/ts-buttoncounter-debug#readme",
   "dependencies": {
-    "live-server": "^1.2.1",
     "save": "^2.4.0"
   }
 }
