--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ts-buttoncounter-debug",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "live-server"
